copy update, css fix (maybe) for second style on mobile

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -79,6 +79,7 @@ button{
         font-family: all-round-gothic, sans-serif;
         font-weight: 500;
         font-style: normal;
+        left: -50vw;
         padding: .5em;
         font-size: 2em;
         z-index: 2;
@@ -86,8 +87,20 @@ button{
         padding-top: 25vh;
         background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgb(240, 161, 161, .4) 15%, rgb(240, 161, 161, .9) 25%, rgb(240, 106, 65) 100%);
         color: rgb(251, 220, 42);
-
     }
+    @media screen and (max-width: 700px) {
+            .mod #main-text {
+                width: 200vw;
+                position: absolute;
+                transform: translateX(-50vw);
+            }
+            .mod #main-text p {
+                width: 100vw;
+                transform: translateX(50vw);
+                margin: 0 auto;
+                padding: 1em;
+            }
+        }
     .mod #last-paragraph {
         margin-bottom: 0;
     }
